add producer scanner